--- a/styels/styels.css
+++ b/styels/styels.css
@@ -12,9 +12,10 @@
     background: #E55473;
     width: 10px 80px;
     color: white;
+    border: none;
 }
 header{
-    width:  1400px;
+    width:  1500px;
     height: 630px;;
     background: #ede6e8 .10%;
     margin: 0;
@@ -29,6 +30,7 @@ header{
 }
 
 /* .banner-2 */
+
 .banner-2{
 display: flex;
 justify-content: space-around;
@@ -43,7 +45,41 @@ align-items: center;
 }
 
   nav{
-    margin-top: 50px;
+    margin-top: 100px;
     background:  #ede6e8 .10%;
   }
 
+.red-city{
+    text-align: center;
+    margin-top: 50px;
+    font-size: large;
+}
+
+.first-shopping{
+    text-align: center;
+    
+}
+.shopping{
+    margin-top: 70px;
+  height: 40vh;
+}
+
+.btn-secandry{
+    color: #E55473;
+}
+
+.flower-shop{
+    background-color: black;
+    height: 300px;
+    
+}
+.btn-third{
+    color: white;
+}
+.btn-fourth{
+    color: white;
+}
+.btn-fiveth{
+    color: white;
+    font-size: small;
+}
